pricing and plans section completed

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
                     <div class="text">
 
-                        <div class="right_triangle_deco"></div>
+                        <div class="triangleDecoRight"></div>
                         <!-- <div class="up_triangle_deco"></div> -->
 
                         <div class="textContent">
@@ -736,7 +736,7 @@
                     </div>
 
                     <div class="text ">
-                        <div class="right_triangle_deco"></div>
+                        <div class="triangleDecoRight"></div>
                         <!-- <div class="up_triangle_deco"></div> -->
 
 
@@ -771,7 +771,7 @@
 
 
                     <div class="text ">
-                        <div class="left_triangle_deco"></div>
+                        <div class="triangleDecoLeft"></div>
                         <!-- <div class="up_triangle_deco"></div> -->
 
                         <div class="textContent">
@@ -801,7 +801,7 @@
                     </div>
 
                     <div class="text ">
-                        <div class="left_triangle_deco"></div>
+                        <div class="triangleDecoLeft"></div>
                         <!-- <div class="up_triangle_deco"></div> -->
 
                         <div class="textContent">
@@ -826,6 +826,372 @@
                         </div>
                     </div>
 
+                </div>
+
+            </div>
+
+        </section>
+
+          <!-- PRICING -->
+          <section id="pricing" class="pricing">
+
+            <div class="content">
+
+                <div class="titleSection">
+                    <div>
+                        <h4 >pricing & plans</h4>
+                    </div>
+                    <div class="imgHammers"><img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+
+                    <div>
+                        <h5>
+                            A solution tailored to you
+                        </h5>
+                    </div>
+
+                </div>
+
+                <div class="promo">
+                    <h4>try it free for 30 days</h4>
+                    <h5>or</h5>
+                    <h4>register now</h4>
+                </div>
+
+                <div class="tablesContainer">
+
+                    <!-- basic plan -->
+                    <table>
+                        <tr>
+                            <th>
+                                <h4>
+                                    Basic plan
+                                </h4>
+                            </th>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>1 email accounts</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>
+                                    1 gb space
+                                </h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>1 domain name</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>1 gb bandwidth</h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    1 mysql databases
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    enhanced security
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="amount">
+                                <span class="sign">$</span>
+                                <span class="money">9</span>
+                                <span class="time">monthly</span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <a class="button " href="" target="_blank">
+                                    <h4>
+                                        get a plan
+                                    </h4>
+                                </a>
+                            </td>
+                        </tr>
+
+                    </table>
+
+                    <!-- plan2 -->
+                    <table>
+                        <tr>
+                            <th>
+                                <h4>
+                                    full plan
+                                </h4>
+                            </th>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>10 email accounts</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>
+                                    10 gb space
+                                </h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>10 domain name</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>10 gb bandwidth</h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    10 mysql databases
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    enhanced security
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="amount">
+                                <span class="sign">$</span>
+                                <span class="money">99</span>
+                                <span class="time">monthly</span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <a class="button " href="" target="_blank">
+                                    <h4>
+                                        get a plan
+                                    </h4>
+                                </a>
+                            </td>
+                        </tr>
+
+                    </table>
+
+                     <!-- plan2 -->
+                     <table>
+                        <tr>
+                            <th>
+                                <h4>
+                                    premium plan
+                                </h4>
+                            </th>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>50 email accounts</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>
+                                    50 gb space
+                                </h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>50 domain name</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>50 gb bandwidth</h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    50 mysql databases
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    enhanced security
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="amount">
+                                <span class="sign">$</span>
+                                <span class="money">999</span>
+                                <span class="time">monthly</span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <a class="button " href="" target="_blank">
+                                    <h4>
+                                        get a plan
+                                    </h4>
+                                </a>
+                            </td>
+                        </tr>
+
+                    </table>
+
+                     <!-- basic plan2 -->
+                     <table>
+                        <tr>
+                            <th>
+                                <h4>
+                                    ultimate plan
+                                </h4>
+                            </th>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>* email accounts</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>
+                                    * gb space
+                                </h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>* domain name</h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h5>* gb bandwidth</h5>
+                                <svg class="icon check" viewBox="0 0 512 512">
+                                    <path
+                                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z">
+                                    </path>
+                                </svg>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    * mysql databases
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr class="display_none_mobile">
+                            <td>
+                                <h5>
+                                    enhanced security
+                                </h5>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="amount">
+                                <span class="sign">$</span>
+                                <span class="money">9999</span>
+                                <span class="time">monthly</span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <a class="button " href="" target="_blank">
+                                    <h4>
+                                        get a plan
+                                    </h4>
+                                </a>
+                            </td>
+                        </tr>
+
+                    </table>
+                    
                 </div>
 
             </div>
