get in touch section completed

--- a/index.html
+++ b/index.html
@@ -843,7 +843,6 @@
                     </div>
                     <div class="imgHammers"><img src="./icons/hammers.png" alt="image-hammers">
                     </div>
-
                     <div>
                         <h5>
                             A solution tailored to you
@@ -1198,6 +1197,140 @@
 
         </section>
 
+           <!-- GET IN TOUCH -->
+           <section id="getInTouch" class="getInTouch">
+
+            <div class="content">
+
+                <div class="titleSection">
+                    <div>
+                        <h4>get in touch</h4>
+                    </div>
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+                    <div>
+                         <h5>fast support 24/7</h5>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="contact">
+
+                <div class="content">
+
+                    <div class="info">
+
+                        <div class="infoItem">
+
+                            <div class="icon mobile"></div>
+                            <div class="text">
+
+                                <h5>+61383766284</h5>
+                                <h5>+61383766284</h5>
+
+                            </div>
+                        </div>
+                        <div class="infoItem">
+
+                            <div class="icon mapMarker"></div>
+                            <div class="text">
+
+                                <h5>P.O. Box 21177</h5>
+                                <h5>Little Londsdale St., Melbourne</h5>
+                                <h5>Victoria 8011, Australia</h5>
+
+                            </div>
+                        </div>
+                        <div class="infoItem">
+                            <div class="icon envelope"></div>
+                            <div class="text">
+                                <a href="mailto:pepe@perez.com">
+                                    <h5>support@yourcompanymail.com</h5>
+                                </a>
+
+                            </div>
+                        </div>
+
+                    </div>  
+
+                    <div class="data">
+
+                        <form action="">
+
+                            <div class="formItemContainer">
+
+                                <div class="formItem">
+                                    <label for="name">
+                                        <h6>
+                                            <strong>
+                                                <span class="tostaoColor">*</span>
+                                            </strong>
+                                            name
+                                        </h6>
+                                    </label>
+                                    <input type="text" name="name" id="name" placeholder="First name + Last name">
+                                </div>
+
+                                <div class="formItem">
+                                    <label for="email">
+                                        <h6><strong>
+                                                <span class="tostaoColor">*</span>
+                                            </strong>email</h6>
+                                    </label>
+                                    <input type="text" name="email" id="email" placeholder="Email@domain.bla">
+                                </div>
+
+                                <div class="formItem">
+                                    <label for="subject">
+                                        <h6><strong>
+                                                <span class="tostaoColor">*</span>
+                                            </strong>subject</h6>
+                                    </label>
+                                    <input type="text" name="subject" id="subject"
+                                        placeholder="Summary of your message">
+                                </div>
+
+
+                                <div class="formItemB">
+                                    <label for="content">
+                                        <h6><strong>
+                                                <span class="tostaoColor">*</span>
+                                            </strong>content</h6>
+                                    </label>
+                                    <textarea name="content" id="content"
+                                        placeholder="Content of your message"></textarea>
+                                </div>
+
+                            </div>
+
+                            <div class="buttonContainer">
+                            <!-- <div class="button"> -->
+                                <input type="submit" value="send" class="clickable" >
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
         <section>
             <h1>WORK IN PROGRESS...</h1>
         </section>
@@ -1209,7 +1342,7 @@
 
 
     <!-- add fake and test content under  this line -->
-<!-- 
+
     <div class=" section refe">
         <h1>hola mundo !h1</h1>
         <h2>hola mundo !h2</h2>
@@ -1217,7 +1350,7 @@
         <h4>hola mundo !h4</h4>
         <h5>hola mundo !h5</h5>
         <h6>hola mundo !h6</h6>
-    </div> -->
+    </div>
 
 
 </body>
