--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
 
                 <div class="pic">
                     <a href="">
-                        
+
                         <img src="./images/footer_instagram_04.png" alt="image-footer_instagram_01">
 
                         <div class="overlay">
@@ -1560,35 +1560,67 @@
         </div>
 
     </div>
+        </div>
 
-</div>
+         <!--COPYRIGHT AND SOCIAL-->
+         <footer>
 
+            <div class="content">
 
+                <div class="copyright">
+                    <p> &#169; 2019 zap creative html template design by wpelite (copied by ....)</p>
+                </div>
 
+                <div class="social">
+                    <a  href="">
+                        <svg class="icon facebook" id="Layer_1" viewBox="0 0 264 512">
+                        <path
+                        d="M215.8,85H264V3.6C255.7,2.5,227.1,0,193.8,0C124.3,0,76.7,42.4,76.7,120.3V192H0v91h76.7v229h94V283h73.6l11.7-91h-85.3	v-62.7C170.7,103,178,85,215.8,85L215.8,85z" />
+                        </svg>
+                    </a>
 
-<!-- 
+                    <svg class="icon twitter clickable" id="Layer_1" viewBox="0 0 512 512">
+                        <path d="M459.4,151.7c0.3,4.5,0.3,9.1,0.3,13.6c0,138.7-105.6,298.6-298.6,298.6c-59.5,0-114.7-17.2-161.1-47.1
+                                c8.4,1,16.6,1.3,25.3,1.3c49.1,0,94.2-16.6,130.3-44.8c-46.1-1-84.8-31.2-98.1-72.8c6.5,1,13,1.6,19.8,1.6c9.4,0,18.8-1.3,27.6-3.6
+                                c-48.1-9.7-84.1-52-84.1-103v-1.3c14,7.8,30.2,12.7,47.4,13.3c-28.3-18.8-46.8-51-46.8-87.4c0-19.5,5.2-37.4,14.3-53
+                                C87.4,130.9,165,172.5,252.1,177.1c-1.6-7.8-2.6-15.9-2.6-24c0-57.8,46.8-104.9,104.9-104.9c30.2,0,57.5,12.7,76.7,33.1
+                                c23.7-4.5,46.5-13.3,66.6-25.3c-7.8,24.4-24.4,44.8-46.1,57.8c21.1-2.3,41.6-8.1,60.4-16.2C497.7,118.3,479.8,136.8,459.4,151.7
+                                L459.4,151.7z" />
+                    </svg>
 
-        <section>
-            <h1>WORK IN PROGRESS...</h1>
-        </section> -->
-        
-        <!-- add real content above this line -->
+                    <svg class="icon dribble clickable" id="Layer_1" viewBox="0 0 512 512">
+                        <path
+                            d="M256,0C114.84,0,0,114.84,0,256S114.84,512,256,512,512,397.16,512,256,397.16,0,256,0ZM425.26,118.06a217.62,217.62,0,0,1,49.38,136.21c-7.21-1.53-79.51-16.19-152.26-7-5.94-14.5-11.54-27.25-19.22-43,80.85-33,117.49-80,122.1-86.21ZM401,92.77c-3.93,5.6-36.85,49.84-114.6,79a1166.56,1166.56,0,0,0-81.59-128A218.08,218.08,0,0,1,401,92.77ZM163,58.45a1394.48,1394.48,0,0,1,81.07,126.46C141.82,212.07,51.73,211.68,42,211.55A219.42,219.42,0,0,1,163,58.45ZM37.34,256.33q0-3.34.11-6.68c9.57.2,115.53,1.56,224.73-31.12,6.26,12.25,12.24,24.69,17.73,37.11C200.84,277.91,129,341.86,93.55,402.54A217.81,217.81,0,0,1,37.34,256.33Zm84.44,172.51c22.84-46.69,84.83-107,173-137,30.7,79.77,43.39,146.63,46.64,165.82A218.23,218.23,0,0,1,121.78,428.84Zm256.39,8.76c-2.24-13.3-13.87-77.31-42.47-155.91,68.52-11,128.72,7,136.2,9.35A219.06,219.06,0,0,1,378.17,437.6Z" />
+                    </svg>
+
+                    <svg class="icon behance clickable" id="Layer_1" viewBox="0 0 816.7 512">
+                        <path
+                            d="M329,229.41c45.09-21.55,68.63-54.16,68.63-104.92C397.58,24.39,323,0,236.93,0H0V502.5H243.59c91.32,0,177.1-43.81,177.1-145.9,0-63.1-29.92-109.75-91.74-127.19ZM110.45,85.78H214.1c39.84,0,75.72,11.2,75.72,57.43,0,42.68-27.94,59.83-67.35,59.83h-112ZM228.56,417.14H110.45V278.76H230.83c48.64,0,79.4,20.27,79.4,71.74,0,50.76-36.72,66.64-81.67,66.64ZM736.88,75.86H533.13V26.37H736.88V75.86Zm79.82,250c0-107.62-63-197.37-177.09-197.37-110.88,0-186.17,83.37-186.17,192.55,0,113.29,71.32,191,186.17,191,86.92,0,143.21-39.13,170.29-122.36H721.71c-9.5,31.05-48.64,47.5-79,47.5-58.56,0-89.33-34.32-89.33-92.59H815.85C816.28,338.59,816.7,332.21,816.7,325.83ZM553.54,281.59c3.27-47.78,35-77.7,83-77.7,50.19,0,75.43,29.49,79.69,77.7Z" />
+                    </svg>
+
+                    <svg class="icon pinterest clickable" id="Layer_1" viewBox="0 0 512 512">
+                        <path
+                            d="M512,256c0,141.42-114.58,256-256,256a255.05,255.05,0,0,1-75.77-11.46c10.43-17,26-44.9,31.8-67.09,3.09-12,15.89-60.91,15.89-60.91,8.36,15.9,32.73,29.42,58.63,29.42,77.22,0,132.86-71,132.86-159.28,0-84.54-69.06-147.82-157.84-147.82-110.45,0-169.18,74.12-169.18,155,0,37.57,20,84.33,51.92,99.2,4.85,2.27,7.43,1.24,8.57-3.41.82-3.51,5.16-21,7.12-29a7.67,7.67,0,0,0-1.75-7.33c-10.43-12.9-18.9-36.43-18.9-58.42,0-56.47,42.74-111.07,115.62-111.07,62.86,0,106.94,42.84,106.94,104.15,0,69.27-35,117.27-80.52,117.27-25.08,0-44-20.75-37.88-46.25,7.23-30.45,21.16-63.28,21.16-85.26,0-19.62-10.53-36-32.41-36-25.71,0-46.35,26.53-46.35,62.14,0,22.71,7.64,38,7.64,38S168.26,400.93,163.61,421c-5.16,22.1-3.09,53.27-.93,73.5C67.51,457.19,0,364.49,0,256,0,114.58,114.58,0,256,0S512,114.58,512,256Z" />
+                    </svg>
+
+                    <svg class="icon googlePlus clickable" id="Layer_1" viewBox="0 0 819.2 512">
+                        <path
+                            d="M497.68,219.33a216.74,216.74,0,0,1,4.19,42.61C501.87,408.27,403.73,512,256,512,114.55,512,0,397.45,0,256S114.55,0,256,0c69.15,0,126.78,25.15,171.48,67.06L358,133.76c-18.86-18.16-52-39.46-102-39.46C168.69,94.3,97.44,166.59,97.44,256S168.69,417.7,256,417.7c101.28,0,139.35-73,145.29-110.36H256v-88Zm247.21,8.58V153.6H670.22v74.31H595.91v74.67h74.31v74.31h74.67V302.58H819.2V227.91Z" />
+                    </svg>
+
+                </div>
+
+            </div>
+
+        </footer>
+
+            <svg id="arrowUp" class="arrowUp clickable" onclick="scrollUp()" viewBox="0 0 513 513">
+                <path class="arrow_background "
+                    d="M477.5.5H35.5a35,35,0,0,0-35,35v442a35,35,0,0,0,35,35h442a35,35,0,0,0,35-35h0V35.5A35,35,0,0,0,477.5.5Z" />
+                <path class="arrow_shape"
+                    d="M467.7,267.7l-22.2,22.2a24,24,0,0,1-33.94,0l-.36-.37L296.5,169.1V456.5a23.94,23.94,0,0,1-23.88,24H240.5a23.94,23.94,0,0,1-24-23.88V169.1L101.7,289.6a23.84,23.84,0,0,1-33.71,1L67.4,290,45.2,267.8a23.9,23.9,0,0,1-.1-33.8l.1-.1L239.5,39.5a23.9,23.9,0,0,1,33.8-.1l.1.1L467.7,233.8a23.9,23.9,0,0,1,.1,33.8Z" />
+            </svg>
 
     </div>
-
-
-
-    <!-- add fake and test content under  this line -->
-
-    <div class=" section refe">
-        <h1>hola mundo !h1</h1>
-        <h2>hola mundo !h2</h2>
-        <h3>Style pending to be define, STYLE PENDING TO BE DEFINE !h3</h3>
-        <h4>hola mundo !h4</h4>
-        <h5>hola mundo !h5</h5>
-        <h6>hola mundo !h6</h6>
-        <p>fknfoqnnwqdknwlkn.aknajnca;kbvaksjkffknfoqnnwqdknwlkn.aknajnca;kbvaksjkffknfoqnnw.aknajnca;kbvaksjkf</p>
-    </div>
-
 
 </body>
